fix(table): resolve text alignment issue in table not working
https://github.com/cycleccc/wangEditor-next/issues/176

--- a/packages/table-module/src/assets/index.less
+++ b/packages/table-module/src/assets/index.less
@@ -20,7 +20,6 @@
       border: 1px solid @textarea-border-color;
       padding: 3px 5px;
       min-width: 30px;
-      text-align: left;
       line-height: 1.5;
       /* 强制换行，table column 宽度必须拖动增大 */
       overflow: hidden;
